manifest-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-web
  template:
    metadata:
      labels:
        app: student-web
    spec:
      containers:
      - name: student-web
        image: snipesa/student_web
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
  # include this section if making use of config maps
        # env:
        # - name: DATABASE_URL
        #   valueFrom:
        #   configMapKeyRef:
        #     name: student-web
        #     key: database_url
        ports:
        - containerPort: 8080
