manifest-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-student
spec:
  selector:
    app: student-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
